specs/001-typescript-to-zig-native/examples/invalid/switch-case-type.ts
let value = 1;

switch (value) {
  case "one":
    console.log("bad");
    break;
}
